    sources = [
        "Main.cpp",
        "src/Actions.hpp",
        "src/ActionsApple.cpp",
        "src/ActionsLinux.cpp",
        "src/ActionsWin32.cpp",
        "src/AllBuiltNodes.cpp",
        "src/AllBuiltNodes.hpp",
        "src/Atomic.hpp",
        "src/Banned.hpp",
        "src/BinLogFormat.hpp",
        "src/BinaryData.hpp",
        "src/BinaryWriter.cpp",
        "src/BinaryWriter.hpp",
        "src/Buffer.hpp",
        "src/BuildLoop.cpp",
        "src/BuildLoop.hpp",
        "src/BuildQueue.cpp",
        "src/BuildQueue.hpp",
        "src/CacheClient.cpp",
        "src/CacheClient.hpp",
        "src/Common.cpp",
        "src/Common.hpp",
        "src/ConditionVar.cpp",
        "src/ConditionVar.hpp",
        "src/Config.hpp",
        "src/DagData.cpp",
        "src/DagData.hpp",
        "src/DagDerivedCompiler.cpp",
        "src/DagDerivedCompiler.hpp",
        "src/DagGenerator.cpp",
        "src/DagGenerator.hpp",
        "src/DetectCyclicDependencies.cpp",
        "src/DetectCyclicDependencies.hpp",
        "src/DigestCache.cpp",
        "src/DigestCache.hpp",
        "src/Driver.cpp",
        "src/Driver.hpp",
        "src/DynamicallyGrowingCollectionOfPaths.cpp",
        "src/DynamicallyGrowingCollectionOfPaths.hpp",
        "src/EventLog.cpp",
        "src/EventLog.hpp",
        "src/Exec.cpp",
        "src/Exec.hpp",
        "src/ExecUnix.cpp",
        "src/ExecWin32.cpp",
        "src/FileInfo.cpp",
        "src/FileInfo.hpp",
        "src/FileInfoHelper.cpp",
        "src/FileInfoHelper.hpp",
        "src/FileSign.cpp",
        "src/FileSign.hpp",
        "src/FileSystem.cpp",
        "src/FileSystem.hpp",
        "src/FindNodesByName.cpp",
        "src/FindNodesByName.hpp",
        "src/Hash.cpp",
        "src/Hash.hpp",
        "src/HashFast.cpp",
        "src/HashSha1.cpp",
        "src/HashTable.hpp",
        "src/IncludeScanner.cpp",
        "src/IncludeScanner.hpp",
        "src/InputSignature.cpp",
        "src/InputSignature.hpp",
        "src/Inspect.cpp",
        "src/Inspect.hpp",
        "src/JsonParse.cpp",
        "src/JsonParse.hpp",
        "src/JsonWriter.cpp",
        "src/JsonWriter.hpp",
        "src/LeafInputSignature.cpp",
        "src/LeafInputSignature.hpp",
        "src/LeafInputSignatureOffline.cpp",
        "src/LeafInputSignatureOffline.hpp",
        "src/LoadFrozenData.hpp",
        "src/LoadOrBuildDag.cpp",
        "src/MakeDirectories.cpp",
        "src/MakeDirectories.hpp",
        "src/MemAllocHeap.cpp",
        "src/MemAllocHeap.hpp",
        "src/MemAllocLinear.cpp",
        "src/MemAllocLinear.hpp",
        "src/MemoryMappedFile.cpp",
        "src/MemoryMappedFile.hpp",
        "src/Mutex.hpp",
        "src/NodeResultPrinting.cpp",
        "src/NodeResultPrinting.hpp",
        "src/OutputValidation.cpp",
        "src/OutputValidation.hpp",
        "src/PathUtil.cpp",
        "src/PathUtil.hpp",
        "src/Profiler.cpp",
        "src/Profiler.hpp",
        "src/ReadWriteLock.cpp",
        "src/ReadWriteLock.hpp",
        "src/RemoveStaleOutputs.cpp",
        "src/RemoveStaleOutputs.hpp",
        "src/ReportIncludes.cpp",
        "src/ReportIncludes.hpp",
        "src/RunAction.cpp",
        "src/RunAction.hpp",
        "src/RuntimeNode.hpp",
        "src/ScanCache.cpp",
        "src/ScanCache.hpp",
        "src/ScanData.hpp",
        "src/Scanner.cpp",
        "src/Scanner.hpp",
        "src/SharedResources.cpp",
        "src/SharedResources.hpp",
        "src/SignalHandler.cpp",
        "src/SignalHandler.hpp",
        "src/SortedArrayUtil.hpp",
        "src/StackTrace.cpp",
        "src/StackTrace.hpp",
        "src/StandardInputCanary.cpp",
        "src/StandardInputCanary.hpp",
        "src/StatCache.cpp",
        "src/StatCache.hpp",
        "src/Stats.hpp",
        "src/Thread.cpp",
        "src/Thread.hpp",
        "src/re.c",
        "src/re.h",
    ]
}
